--- a/app/src/main/res/layout/earthquake_list.xml
+++ b/app/src/main/res/layout/earthquake_list.xml
@@ -8,15 +8,21 @@
     android:padding="16dp">
     <TextView
         android:id="@+id/magnitude"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="@drawable/magnitude_circle"
+        android:fontFamily="sans-serif-medium"
+        android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
         tools:text="8.9"/>
     <TextView
         android:id="@+id/locationPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginLeft="16dp"
         tools:text="California"/>
     <TextView
         android:id="@+id/locationSecondary"
